plugins {
    id "java-library"
    id "com.github.spotbugs" version "5.0.7" apply false
    id "org.sonarqube" version "3.3"
}

wrapper {
    gradleVersion = "7.4.2"
}

dependencies {
    implementation project(":application")
    implementation project(":console")
    implementation project(":core")
}

jar {
    manifest {
        attributes("Main-Class": "com.mower.MowerApp")
    }

    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }

    duplicatesStrategy = DuplicatesStrategy.INCLUDE
}

subprojects {
    repositories {
        mavenCentral()
    }

    apply plugin: "java"
    apply plugin: "jacoco"
    apply plugin: "pmd"
    apply plugin: "com.github.spotbugs"

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }
    }

    group "com.mower"
    version "1.0.0"

    dependencies {
        testImplementation "org.assertj:assertj-core:3.19.0"
        testImplementation "org.mockito:mockito-junit-jupiter:3.9.0"
        testImplementation "org.junit.jupiter:junit-jupiter-params:5.7.0"
        testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.7.0"
    }

    test {
        useJUnitPlatform()
    }

    check.finalizedBy(jacocoTestReport)

    pmd {
        ignoreFailures = true
    }
    pmdMain {
        reports {
            xml.required = true
            html.required = true
        }
    }
    pmdTest {
        reports {
            xml.required = true
            html.required = true
        }
    }

    spotbugs {
        ignoreFailures = true
    }
    spotbugsMain {
        reports {
            xml.required = true
            html.required = true
        }
    }
    spotbugsTest {
        reports {
            xml.required = true
            html.required = true
        }
    }

    jacocoTestReport {
        reports {
            xml.required = true
            html.required = true
        }
    }
}

sonarqube {
    properties {
        property "sonar.projectKey", "javintx_mower"
        property "sonar.organization", "javintx"
        property "sonar.host.url", "https://sonarcloud.io"
    }
}

